<resources>
    <string name="app_name">TP5</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="All_Sensors">All Sensors</string>
    <string name="Accelerometer">Accelerometer</string>
    <string name="Gyroscope">Gyroscope</string>
    <string name="Magnetometer">Magnetometer</string>
    <string name="Proxymity">Proxymity</string>
    <string name="Photometer">Photometer</string>

</resources>